--- a/source/assets/stylesheets/scss/layout/_account.scss
+++ b/source/assets/stylesheets/scss/layout/_account.scss
@@ -7,6 +7,14 @@
     text-transform: none;
     box-shadow: 0 1px 1px rgba(#000, .14), 0 2px 1px -1px rgba(#000, .12), 0 1px 3px rgba(#000, .2);
     border-radius: 4px;
+
+    @media screen and (max-width: 768px) {
+      position: fixed;
+      width: 100%;
+      height: calc(100% - 60px);
+      top: 0;
+      left: 0;
+    }
   }
 
   &-header {
